Updated the storage route

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 anY62P1USvPH2IZj
 kolesnikovtimyrweb
 
-MONGODB_URI = "mongodb+srv://kolesnikovtimyrweb:anY62P1USvPH2IZj@cluster0.u230icl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGODB_URI = "mongodb+srv://kolesnikovtimyrweb:FdKxArQfi0hh5LuH@cluster0.iamttly.mongodb.net/books_db?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET = "LOL"
